--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rabindra-kit",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Develop for Developer By Developer",
   "main": "index.js",
   "scripts": {
@@ -26,6 +26,7 @@
   "dependencies": {
     "commander": "^12.1.0",
     "fs-extra": "^11.2.0",
-    "inquirer": "^12.2.0"
+    "inquirer": "^12.2.0",
+    "prettier": "^3.4.2"
   }
 }
